# xsum.rs

./: Cargo.toml  README.md
.github/workflows/: rust_ci.yml
benches/: bench_xsum_sum.rs  common.rs
src/: accumulators.rs  constants.rs  lib.rs  traits.rs  xsum_auto.rs  xsum_large.rs  xsum_small.rs  xsum_variant.rs
src/accumulators/: large_accumulator.rs  small_accumulator.rs
tests/: common.rs  integration_test.rs
