[package]
name = "xsum"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
license = "MIT"
authors = ["Keita Nonaka <iKonnyaku40@gmail.com>"]
categories = ["algorithms", "mathematics", "science"]
description = "Fast Exact Summation of Floating-Point Numbers"
documentation = "https://docs.rs/xsum/"
keywords = [
  "exact",
  "sum",
  "floating-point",
  "summation",
  "numerical-error",
]
readme = "README.md"
homepage = "https://github.com/Gumichocopengin8/xsum.rs"
repository = "https://github.com/Gumichocopengin8/xsum.rs"
exclude = ["/.github"]

[badges]
mathematics = { status = "actively-developed" }

[dependencies]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "bench_xsum_sum"
harness = false
